README: Update IDE instructions for JDK21